SERVER-21325 remove warning about inconsistent sizeStorer stats during validate